[gd_scene load_steps=2 format=3 uid="uid://c6cob0tsq7c6k"]

[ext_resource type="Script" uid="uid://pak84tikc2nh" path="res://faction_card.gd" id="1_kofre"]

[node name="FactionCard" type="Panel"]
custom_minimum_size = Vector2(500, 500)
offset_left = 62.0
offset_top = 3.0
offset_right = 1102.0
offset_bottom = 643.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kofre")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 1024.0
offset_bottom = 621.0

[node name="FactionColor" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
color = Color(1, 0.203922, 1, 1)

[node name="FactionLabel" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_top = 24.0
offset_right = 1000.0
offset_bottom = 47.0

[node name="FundsLabel" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = -1.0
offset_top = 52.0
offset_right = 999.0
offset_bottom = 75.0

[node name="SuppliesLabel" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = -1.0
offset_top = 87.0
offset_right = 999.0
offset_bottom = 110.0

[node name="Order Queue" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = 1.0
offset_top = 156.0
offset_right = 1001.0
offset_bottom = 179.0

[node name="OrderQueueList" type="VBoxContainer" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = 1.0
offset_top = 230.0
offset_right = 1001.0
offset_bottom = 230.0

[node name="Income Log" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = -1.0
offset_top = 339.0
offset_right = 999.0
offset_bottom = 362.0

[node name="IncomeLogList" type="VBoxContainer" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_left = 1.0
offset_top = 330.0
offset_right = 1001.0
offset_bottom = 330.0

[node name="Members" type="Label" parent="VBoxContainer/FactionColor"]
layout_mode = 2
offset_top = 507.0
offset_right = 1000.0
offset_bottom = 530.0

[node name="MemberCards" type="FlowContainer" parent="VBoxContainer/FactionColor"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
offset_left = 1.0
offset_top = 399.0
offset_right = 1001.0
offset_bottom = 599.0
alignment = 1
last_wrap_alignment = 2
vertical = true
